--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -25,6 +25,7 @@ $siRedditColor: #000000 !default;
 $siLastfmColor: #e31c23 !default;
 $siStackoverflowColor: #fca733 !default;
 $siPinterestColor: #cb2028 !default;
+$siInstagramColor: #3f729b !default;
 
 // Default Font Sizes
 $si16x16FontSize: 16px !default;
